# ZUM_tasks

./: .gitignore  README.md
.devcontainer/: devcontainer.json
Semestral_work/: README.md  game.py  main.py  protocol.odt  pyproject.toml  snake.py  tiles.py  utils.py
Semestral_work/ai/: bfs_check.py  evolution.py  neural_network.py  snake_individual.py
Semestral_work/src/: main.py
Semestral_work/src/snake/: game.py  main_menu.py  snake.py  tiles.py  utils.py
Semestral_work/src/snake/ai/: bfs_check.py  evolution.py  neural_network.py  snake_individual.py
Semestral_work/tests/: test_evolution.py  test_individual.py  test_neural_network.py  test_snake.py
task_1/: README.md  a_star.py  bfs.py  dfs.py  dijkstra.py  greedy_search.py  main.py  pyproject.toml  random_search.py  utils.py
task_1/data/: 0.txt  114.txt  220.txt  26.txt  332.txt  36.txt  4.txt  42.txt  6.txt  72.txt  8.txt  84.txt
task_1/dataset/: 72.txt
task_1/src/: main.py
task_1/src/zum_1/: a_star.py  bfs.py  dfs.py  dijkstra.py  greedy_search.py  random_search.py  utils.py
task_1/testovaci_data/: test_1.txt
task_1/tests/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt
task_3/: README.md
task_3/additional_1/: domain.pddl  sas_plan  task.pddl
task_3/additional_2/: domain.pddl  sas_plan  task.pddl
task_3/additional_3/: domain.pddl  task.pddl
task_3/additional_4/: domain.pddl  sas_plan  task.pddl
task_3/original/: domain.pddl  sas_plan  task.pddl
task_3/test/: domain.pddl  sas_plan  task.pddl
task_4/: README.md  evolution.py  individual.py  main.py  protocol.odt
task_4/steps/: crowding_step.py  simple_step.py
