[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snake"
version = "0.1.0"
description = "The Snake game that can also play itself"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["snake", "genetic_algorithm", "game", "mutation", "crossing"]

requires-python = ">=3.12"

authors = [{ name = "Nikita Mortuzaiev", email = "nikita.mortuzaiev@gmail.com" }]
maintainers = [
  { name = "Nikita Mortuzaiev", email = "nikita.mortuzaiev@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Mathematics",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy", "pygame"]

[project.scripts]
snake = "main:main"
