[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zum_1"
version = "0.1.0"
description = "A simple visualization of path pinding algorithms."
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["path_finding", "random_search", "bfs", "dfs", "dijkstra_algorithm", "greedy_search", "a_star"]

requires-python = ">=3.12"

authors = [{ name = "Nikita Mortuzaiev", email = "nikita.mortuzaiev@gmail.com" }]
maintainers = [
  { name = "Nikita Mortuzaiev", email = "nikita.mortuzaiev@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Mathematics",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy"]

[project.scripts]
zum_1 = "main:main"
